--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"小巨像博客",
+    "subTitle":"一个人",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/141015111?v=4",
     "GMEEK_VERSION":"last"
 }
